--- a/compose/todo.html
+++ b/compose/todo.html
@@ -80,7 +80,6 @@
 
     <div id="todoList">
 
-
         <div class="todo-item">
             <input type="checkbox" id="item5" class="todo-checkbox">
             <label for="item5" class="todo-label">Create Own Ui for Adaptive Layout with Dynamic Navigation, for Mobile, Tablet</label>
@@ -110,7 +109,47 @@
             </label>
         </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item11" class="todo-checkbox">
+            <label for="item11" class="todo-label">Learn and Study <a href="https://www.youtube.com/watch?v=EF33KmyprEQ&ab_channel=PhilippLackner">Android MVVM Design</a> Pattern
+            </label>
+        </div>
 
+        <div class="todo-item">
+            <input type="checkbox" id="item12" class="todo-checkbox">
+            <label for="item12" class="todo-label">Create Static Design and Open Pull Request
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item13" class="todo-checkbox">
+            <label for="item13" class="todo-label">Study and Learn, How to create implementation library
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item14" class="todo-checkbox">
+            <label for="item14" class="todo-label">Create Website Design in Figma, and Create in Jetpack WASM
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item15" class="todo-checkbox">
+            <label for="item15" class="todo-label">Animations in Jetpack Compose (Ref. LinkedIn, GitHub)
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item16" class="todo-checkbox">
+            <label for="item16" class="todo-label">Self Resume App, Ref. from website
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item17" class="todo-checkbox">
+            <label for="item17" class="todo-label">Custom UI in KMM (Android, iOS, Desktop, Website)
+            </label>
+        </div>
 
     </div>
 
