play store link and resume

--- a/compose/pages/page_compose_m3.html
+++ b/compose/pages/page_compose_m3.html
@@ -20,8 +20,8 @@
 </header>
 
 <div style="text-align: center;">
-    <p>Download <b>M3 Compose</b> App</p>
-    <p style="font-size:12px;">From Indus App Store &amp; PlayStore (soon)</p>
+    <p>Download <b><a href="https://play.google.com/store/apps/details?id=com.codexdroid.m3compose">M3 Compose</a></b> App</p>
+    <p style="font-size:12px;">From Indus App Store &amp; PlayStore</p>
 </div>
 
 
