--- a/compose/todo.html
+++ b/compose/todo.html
@@ -111,7 +111,9 @@
 
         <div class="todo-item">
             <input type="checkbox" id="item11" class="todo-checkbox">
-            <label for="item11" class="todo-label">Learn and Study <a href="https://www.youtube.com/watch?v=EF33KmyprEQ&ab_channel=PhilippLackner">Android MVVM Design</a> Pattern
+            <label for="item11" class="todo-label">Study MVVM Design Pattern
+                <a href="https://www.youtube.com/watch?v=EF33KmyprEQ&ab_channel=PhilippLackner"> from here</a> or
+                <a href="https://www.youtube.com/watch?v=WYHuLJVEaLc"> From here</a>
             </label>
         </div>
 
@@ -148,6 +150,12 @@
         <div class="todo-item">
             <input type="checkbox" id="item17" class="todo-checkbox">
             <label for="item17" class="todo-label">Custom UI in KMM (Android, iOS, Desktop, Website)
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item18" class="todo-checkbox">
+            <label for="item18" class="todo-label">Explore and Learn <a href="https://developer.android.com/quick-guides">Compose Quick Guide</a>
             </label>
         </div>
 
