--- a/compose/todo.html
+++ b/compose/todo.html
@@ -92,12 +92,6 @@
         </div>
 
         <div class="todo-item">
-            <input type="checkbox" id="item7" class="todo-checkbox">
-            <label for="item7" class="todo-label">Create Small app for Admin for Collage Student in RoomDatabase (CRUD)
-            </label>
-        </div>
-
-        <div class="todo-item">
             <input type="checkbox" id="item8" class="todo-checkbox">
             <label for="item8" class="todo-label">Create Small app for Saving Data in DataStore (SharePref)
             </label>
@@ -184,7 +178,6 @@
             </label>
         </div>
 
-
         <div class="todo-item">
             <input type="checkbox" id="item1" class="todo-checkbox" checked disabled>
             <label for="item1" class="todo-label done">Show List like RecyclerView, OnClick Event on Each Item</label>
@@ -201,6 +194,12 @@
             <label for="item10" class="todo-label done">
                 Swipe to Dismiss App
                 <a target="_blank" href="../compose/pages/page_animation.html">See this Page</a>
+            </label>
+        </div>
+
+        <div class="todo-item">
+            <input type="checkbox" id="item7" class="todo-checkbox" checked disabled>
+            <label for="item7" class="todo-label done">Room Database | CRUD Operation
             </label>
         </div>
 
