--- a/compose/pages/page_animation.html
+++ b/compose/pages/page_animation.html
@@ -9,15 +9,23 @@
 </head>
 
 <body>
+
+<!--    <div id="header"></div>-->
+<!--    <script src="../ui_pages/page_header.js"></script>-->
+
+
 <header>
-    <h1 class="header-heading">Jetpack Compose / Animation</h1>
+    <h1 class="header-heading">Jetpack Compose Study</h1>
+    <p>Note: 💻🖥️✅ | 📱❎</p>
     <div>
-        <a class="menu" href="../todo.html" id="todoLink">To-Do</a>
-        <a class="menu" href="../notes.html" id="notesLink">Notes</a>
-        <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
+        <a class="menu" href="../download.html" id="downloadLink">Download</a>
+        <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
+        <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
+        <a class="menu selected" href="../index.html" id="composeLink">Compose</a>
         <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
+
 
 <div class="page">
     <div class="code-container"></div>
@@ -63,26 +71,36 @@
     </div>
 </div>
 
+<script>
+        const profileLink = document.getElementById("profileLink");
+        const composeLink = document.getElementById("composeLink");
+        const downloadLink = document.getElementById("downloadLink");
 
+        const headerHeading = document.querySelector(".header-heading");
 
+        profileLink.addEventListener("click", () => {
+            profileLink.classList.add("selected");
+            composeLink.classList.remove("selected");
+            downloadLink.classList.remove("selected");
+            headerHeading.textContent = "Akshay's Profile";
+        });
+
+        composeLink.addEventListener("click", () => {
+            composeLink.classList.add("selected");
+            profileLink.classList.remove("selected");
+            downloadLink.classList.remove("selected");
+            headerHeading.textContent = "Jetpack Compose";
+        });
+
+        downloadLink.addEventListener("click", () => {
+            downloadLink.classList.add("selected");
+            composeLink.classList.remove("selected");
+            profileLink.classList.remove("selected");
+            headerHeading.textContent = "App Download";
+        });
+    </script>
 
 <script type="text/javascript">
-
-    const profileLink = document.getElementById("profileLink");
-    const composeLink = document.getElementById("composeLink");
-    const headerHeading = document.querySelector(".header-heading");
-
-    profileLink.addEventListener("click", () => {
-        profileLink.classList.add("selected");
-        composeLink.classList.remove("selected");
-        headerHeading.textContent = "Akshay's Profile";
-    });
-
-    composeLink.addEventListener("click", () => {
-        composeLink.classList.add("selected");
-        profileLink.classList.remove("selected");
-        headerHeading.textContent = "Jetpack Compose";
-    });
 
     //---------------------------------------------------------------
     const cards = document.querySelectorAll('.page-card');
