--- a/compose/pages/page_navigation.html
+++ b/compose/pages/page_navigation.html
@@ -9,15 +9,19 @@
     </head>
 
     <body>
-        <header>
-            <h1 class="header-heading">Jetpack Compose / Navigation</h1>
-            <div>
-                <a class="menu" href="../todo.html" id="todoLink">To-Do</a>
-                <a class="menu" href="../notes.html" id="notesLink">Notes</a>
-                <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-                <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
-            </div>
-        </header>
+
+
+    <header>
+        <h1 class="header-heading">Jetpack Compose Study</h1>
+        <p>Note: 💻🖥️✅ | 📱❎</p>
+        <div>
+            <a class="menu" href="../download.html" id="downloadLink">Download</a>
+            <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
+            <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
+            <a class="menu selected" href="../index.html" id="composeLink">Compose</a>
+            <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
+        </div>
+    </header>
 
         <div class="page">
             <div class="code-container"></div>
@@ -61,25 +65,37 @@
             </div>
         </div>
 
-        <script type="text/javascript">
-
+        <script>
             const profileLink = document.getElementById("profileLink");
             const composeLink = document.getElementById("composeLink");
+            const downloadLink = document.getElementById("downloadLink");
+
             const headerHeading = document.querySelector(".header-heading");
 
             profileLink.addEventListener("click", () => {
                 profileLink.classList.add("selected");
                 composeLink.classList.remove("selected");
+                downloadLink.classList.remove("selected");
                 headerHeading.textContent = "Akshay's Profile";
             });
 
             composeLink.addEventListener("click", () => {
                 composeLink.classList.add("selected");
                 profileLink.classList.remove("selected");
+                downloadLink.classList.remove("selected");
                 headerHeading.textContent = "Jetpack Compose";
             });
 
-            //---------------------------------------------------------------
+            downloadLink.addEventListener("click", () => {
+                downloadLink.classList.add("selected");
+                composeLink.classList.remove("selected");
+                profileLink.classList.remove("selected");
+                headerHeading.textContent = "App Download";
+            });
+        </script>
+
+        <script type="text/javascript">
+
             const cards = document.querySelectorAll('.page-card');
             const dataContainer = document.querySelector('.code-container');
             cards.forEach(pcard => {
