--- a/index.html
+++ b/index.html
@@ -4,85 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jetpack compose Study</title>
-    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="compose/styles/styles.css">
 </head>
 
 <body>
-
-
 <header>
     <h1 class="header-heading">Jetpack Compose Study</h1>
     <p>Note: 💻🖥️✅ | 📱❎</p>
     <div>
-        <a class="menu" href="download.html" id="downloadLink">Download</a>
-        <a class="menu" href="ui_pages/todo.html" id="todoLink">To-Do</a>
-        <a class="menu" href="ui_pages/notes.html" id="notesLink">Notes</a>
-        <a class="menu selected" href="../profile/index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../profile/index.html" id="profileLink">Profile</a>
+        <a class="menu" href="compose/download.html" id="downloadLink">Download</a>
+        <a class="menu" href="compose/ui_pages/todo.html" id="todoLink">To-Do</a>
+        <a class="menu" href="compose/ui_pages/notes.html" id="notesLink">Notes</a>
+        <a class="menu selected" href="profile/index.html" id="composeLink">Compose</a>
+        <a class="menu" href="profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
-
 
     <div class="container">
 
         <div class="card">
-            <a href="pages/page_compose_m3.html">
+            <a href="compose/pages/page_compose_m3.html">
                 <h2>M3 Compose</h2>
                 <p>Compose M3 Component, App Contains</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_widgets.html">
+            <a href="compose/pages/page_widgets.html">
                 <h2>UI Widget</h2>
                 <p>UI Widgets in Jetpack Compose</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_layout.html">
+            <a href="compose/pages/page_layout.html">
                 <h2>Layout</h2>
                 <p>Elements Position, Box, Column, Row</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_background.html">
+            <a href="compose/pages/page_background.html">
                 <h2>Background</h2>
                 <p>Service, Broadcast Receiver, WorkManager etc</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_resources.html">
+            <a href="compose/pages/page_resources.html">
                 <h2>Resources</h2>
                 <p>Animation, Theme, Color, Shape, Other Related</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_navigation.html">
+            <a href="compose/pages/page_navigation.html">
                 <h2>Navigation</h2>
                 <p>Navigate from one screen to other</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_api_web_services.html">
+            <a href="compose/pages/page_api_web_services.html">
                 <h2>API &amp; Room DB</h2>
                 <p>Get Data from Web-Services and Room Database</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_test.html">
+            <a href="compose/pages/page_test.html">
                 <h2>Test</h2>
                 <p>Functional and UI Tests compose</p>
             </a>
         </div>
 
         <div class="card">
-            <a href="pages/page_quick_guide.html">
+            <a href="compose/pages/page_quick_guide.html">
                 <h2>Quick Guide</h2>
                 <p>
                     <a href="https://developer.android.com/quick-guides"> Jetpack Compose Quick Guide</a>
@@ -91,7 +88,7 @@
         </div>
 
         <div class="card">
-            <a href="pages/page_practice.html">
+            <a href="compose/pages/page_practice.html">
                 <h2>Practice</h2>
                 <p>Practice code from Code-Lab or self idea</p>
             </a>
