--- a/compose/pages/page_practice.html
+++ b/compose/pages/page_practice.html
@@ -17,7 +17,7 @@
         <a class="menu" href="../download.html" id="downloadLink">Download</a>
         <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
-        <a class="menu selected" href="../index.html" id="composeLink">Compose</a>
+        <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
         <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
     </div>
 </header>
