--- a/compose/pages/page_resources.html
+++ b/compose/pages/page_resources.html
@@ -38,6 +38,13 @@
         </a>
     </div>
 
+    <div class="card">
+        <a href="page_dependency.html">
+            <h2>Dependencies</h2>
+            <p>List of Dependecy in Jetpack Compose</p>
+        </a>
+    </div>
+
 
     <!-- Add more cards as needed -->
 </div>
