--- a/compose/pages/page_theme.html
+++ b/compose/pages/page_theme.html
@@ -114,6 +114,10 @@
       const data = [
           {
             id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/theme_output_color.png', description: `
+Download Extra icons from
+    implementation (libs.androidx.material.icons.extended)
+    implementation ("androidx.compose.material:compose-material-icons-extended-android")
+______________________________________________________________
 
 Color Picker : https://m3.material.io/theme-builder#/custom
 Color: #[ALPHA][RED][GREEN][BLUE] = #[FF][80][00][88] = #FF800088
