--- a/compose/pages/page_dependency.html
+++ b/compose/pages/page_dependency.html
@@ -117,6 +117,17 @@
         <td>Material 3 Dependency (Existing)</td>
     </tr>
 
+    <tr>
+        <td>
+            <span class="copy-icon" onclick="copyToClipboard('implementation(libs.androidx.graphics.shapes)')">
+                <i class="fa fa-copy" style="font-size:20px"></i>
+            </span>
+            <span class="dependency-text">implementation(libs.androidx.graphics.shapes)</span>
+        </td>
+        <td>Material 3 Dependency for shapes</td>
+    </tr>
+
+
     </tbody>
 </table>
 
