aoogle url updated

--- a/compose/pages/page_background.html
+++ b/compose/pages/page_background.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Background in Compose</title>
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
@@ -18,7 +18,7 @@
         <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
+        <a class="menu" target="_blank" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
     </div>
 </header>
 
