--- a/compose/pages/page_m3_picker.html
+++ b/compose/pages/page_m3_picker.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Layouts in Compose</title>
+    <title>Pickers in Compose</title>
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
@@ -19,7 +19,7 @@
         <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
+        <a class="menu" target="_blank" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
     </div>
 </header>
 
