--- a/compose/pages/page_quick_guide.html
+++ b/compose/pages/page_quick_guide.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Layouts in Compose</title>
+    <title>Quick Guide in Compose</title>
     <link rel="stylesheet" type="text/css" href="../styles/styles.css">
 </head>
 
@@ -19,7 +19,7 @@
         <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-        <a class="menu" href="../../profile/index.html" id="profileLink">Profile</a>
+        <a class="menu" target="_blank" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
     </div>
 </header>
 
@@ -106,7 +106,7 @@
 
         const data = [
             {
-            id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/app/output/Output_scroll_to_top.gif',
+            id: 1, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/Output_scroll_to_top.gif',
             description: `
 
 class MainActivity : ComponentActivity() {
@@ -178,12 +178,12 @@ fun ItemsView(str: String, modifier: Modifier = Modifier) {
     }
 }
 
-
             `
             },
 
             {
-                id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/app/output/output_multi_ui.jpg',
+
+                id: 2, src: 'https://raw.githubusercontent.com/pwraxe/compose/main/compose/images/output_multi_ui.jpg',
                 description: `
 package com.example.myapplication
 
