profile link updated

--- a/compose/download.html
+++ b/compose/download.html
@@ -55,7 +55,7 @@
         <a class="menu" href="ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="ui_pages/notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="../index.html" id="composeLink">Compose</a>
-        <a class="menu" target="_blank" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
+        <a class="menu" target="_blank" href="https://pwraxe.github.io/" id="profileLink">Profile</a>
     </div>
 </header>
 
@@ -68,7 +68,7 @@
             <p style="font-size:10px;">Download App from</p>
             <p>
                 <b>
-                    <a target="_blank" href="https://play.google.com/store/apps/details?id=com.codexdroid.m3compose">Google Play Store</a>
+                    <a target="_blank" href="https://play.google.com/store/apps/developer?id=Codexdroid">Google Play Store</a>
                 </b>
             </p>
             <p>&amp;</p>
