--- a/compose/pages/page_navigation.html
+++ b/compose/pages/page_navigation.html
@@ -19,7 +19,7 @@
             <a class="menu" href="../ui_pages/todo.html" id="todoLink">To-Do</a>
             <a class="menu" href="../ui_pages/notes.html" id="notesLink">Notes</a>
             <a class="menu selected" href="../../index.html" id="composeLink">Compose</a>
-            <a class="menu" target="_blank" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
+            <a class="menu" target="_blank" href="https://pwraxe.github.io/" id="profileLink">Profile</a>
         </div>
     </header>
 
