--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="menu" href="compose/ui_pages/todo.html" id="todoLink">To-Do</a>
         <a class="menu" href="compose/ui_pages/notes.html" id="notesLink">Notes</a>
         <a class="menu selected" href="profile/index.html" id="composeLink">Compose</a>
-        <a class="menu" href="https://pwraxe.github.io/Aoogle/" id="profileLink">Profile</a>
+        <a class="menu" target="_blank" href="https://pwraxe.github.io/" id="profileLink">Profile</a>
     </div>
 </header>
 
